--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -91,7 +91,6 @@
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
-    line-height: 40px;
     text-align: center;
     color: #000000;
   }
@@ -380,7 +379,7 @@ footer .logo-footer :hover{
 }
 
 .text-lng {
-  font-family: Inter;
+  font-family: 'Inter' sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -438,3 +437,342 @@ textarea {
   margin-left: 20px;
   margin-right: 20px;
 }
+
+.logo-video {
+  border: none;
+  background: rgba(0,0,0,0);
+  width: 130px;
+  height: 130px;
+  padding: 0;
+  margin: 0;
+  margin-top: 288px;
+  margin-left: 636px;
+}
+
+.logo-video :hover{
+  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+}
+
+.rss :hover {
+  color: #BDAE82;
+}
+
+.nav-list :hover{
+  color:#BDAE82;
+}
+
+main .skills-row {
+  width: 720px;
+  display: flex;
+  flex-direction: row;
+}
+
+.burger {
+  display:none;
+}
+
+@media (max-width: 768px) {
+  main {
+    padding:0px;
+    margin: 0px;
+    background-image: none;
+  }
+  body {
+    max-width: 768px;
+  }
+
+  header .container {
+    background-image: none;
+    background-image: url("assets/img/bg0.jpg");
+    width: 768px;
+    background-size:auto 590px;
+  }
+  
+  header .logo {
+    margin-top: 25px;
+    margin-left: 60px;
+  }
+
+  .hero {
+    height: 500px;
+    margin:0;
+    padding:0;
+  }
+
+  .bg {
+    height: 500px;
+    padding:0;
+    margin: 0;
+    background-image: url("assets/img/bg0.jpg");
+    background-size:auto 590px;
+    background-position: center -90px;
+    background-repeat: no-repeat;
+  }
+
+  h1 {
+    margin: 0;
+    padding: 78px 543px 20px 60px;
+    width: 165px;
+    height: 64px;
+    font-size: 32px;
+    line-height: 64px;
+    font-style: normal;
+    font-weight: normal;
+  }
+
+  .introduction {
+    width: 390px;
+    height: 72px;
+    padding-left: 60px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 0;
+    margin-bottom: 60px;
+  }
+  
+  .hero span {
+    padding-left: 60px;
+  }
+
+  h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 32px;
+    line-height: 40px;
+  }
+
+  main .skills h2 {
+    padding-bottom: 51px;
+  }
+
+  main .skills {
+    height: 629px;
+  }
+
+  main .skill-item {
+    margin: 0;
+    padding: 0;
+  }
+
+  main .skills-items{
+    margin: 0;
+    justify-content: center;
+    margin-left: 60px;
+    margin-right: 64px;
+    gap: 54px;
+  }
+
+  main .skill-item p {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px
+  
+  }
+
+  main .skills-row {
+    flex-direction: none;
+    display: block;
+  }
+
+  main .portfolio {
+    height: 3870px;
+  }
+
+  .portfolio .heh2 {
+    padding-top: 80px;
+    padding-bottom: 50px;
+  }
+
+  .portfolio .portfolio-buttons {
+    margin-bottom: 55px;
+    display: block;
+    margin-left: 162px;
+  }
+
+  .portfolio button {
+    margin-bottom: 5px;
+  }
+  
+  .portfolio .portfolio-items {
+    display: flex;
+    flex-direction: column;
+    margin-left:159px;
+  }
+  
+  .photo-row {
+    flex-direction: column;
+    gap:25px;
+  }
+  
+  main .video {
+    padding-top: 85px;
+    height:548px;
+  }
+
+  .video-player {
+    background-image: url("assets/img/video-player0.jpg");
+    height: 418px;
+    width: 768px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 65px;
+  }
+ 
+  .logo-video {
+    width: 75px;
+    height: 75px;
+    margin-top: 171px;
+    margin-left: 346px;
+  }
+
+  .logo-video img {
+    width: 75px;
+    height: 75px;
+  }
+
+  main .price {
+    height:1850px;
+    padding-top: 55px;
+  }
+
+  .price .heh2 {
+    margin-bottom:50px;
+  }
+
+  .price-items {
+    flex-direction: column;
+    gap: 50px;
+    margin-left: 174px;
+  }
+
+  .price-item {
+    width: 420px;
+    height: 505px;
+  }
+
+  main .contacts {
+    margin-top: 80px;
+    background-image: none;
+    background-image: url("assets/img/contacts0.jpg");
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 768px;
+  }
+
+  .contacts-h2 {
+    width: 450px;
+    height: 64px;
+    text-align: center;
+    padding-bottom: 40px;
+  }
+  .contacts-form {
+    margin: 0;
+    padding: 0;
+    padding-top: 60px;
+    padding-left: 159px;
+  }
+
+  input {
+    width: 450px;
+    height: 50px;
+    background-color: rgba(0,0,0,0.5);
+  }
+
+  textarea {
+    height: 100px;
+    background-color: rgba(0,0,0,0.5);
+  }
+ 
+  .contacts button {
+    margin-left: 115px;
+  }
+
+  footer {
+    width: 768px;
+    height: 190px;
+    flex-direction: column;
+  }
+
+  .footer-data {
+    margin: 0;
+    padding-left: 299px;
+    padding-top: 28px;
+    display: flex;
+    gap: 20px;
+    height: 24px;
+    margin-bottom: 16px;
+  }
+
+  .rss {
+    margin: 0;
+    padding-left: 279px;
+    margin-bottom: 35px;
+    width: 210px;
+    height: 24px;
+  }
+
+  .social-list {
+    margin: 0;
+    padding-left: 285px;
+  }
+
+  .burger {
+    display: block;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    margin-right: 64px;
+    margin-top: 30px;
+  }
+
+  .nav-list {
+    display: none;
+  }
+
+  .nav-list.active {
+    margin:0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    position:fixed;
+    width: 620px;
+    height: 1024px;
+    margin-left: 148px;
+    background-color:black;
+    left: 0%;
+    transition: 0.3s;
+    font-size: 35px;
+    line-height: 73px;
+    gap:15px;
+    padding-top: 134px;
+    padding-left: 127px;
+  }
+
+ 
+  nav {
+    margin:0;
+    padding: 0;
+  }
+  
+  .switch-lng {
+    margin-left: 442px;
+  }
+
+  .bar {
+    display:block;
+    width: 45px;
+    height: 3px;
+    background-color: white;
+    margin-bottom: 8px;
+    transition: 0.3s;
+  }
+
+  .bar:hover{
+    background-color: #BDAE82;
+  }
+}
+
+
